Update dependencies.