@@ -57,18 +57,18 @@
         <maven.test.failure.ignore>false</maven.test.failure.ignore>
 
         <oddjob.version>1.7.0</oddjob.version>
-        <dido.version>2.0.0-SNAPSHOT</dido.version>
+        <dido.version>2.0.0</dido.version>
 
         <javax.inject.version>1</javax.inject.version>
 
-        <hsql.version>2.6.1</hsql.version>
+        <hsql.version>2.7.4</hsql.version>
 
         <slf4j.version>2.0.17</slf4j.version>
-        <logback.version>1.5.18</logback.version>
+        <logback.version>1.5.20</logback.version>
 
-        <junit5.version>5.13.2</junit5.version>
+        <junit5.version>6.0.1</junit5.version>
         <hamcrest.version>3.0</hamcrest.version>
-        <mockito.version>5.18.0</mockito.version>
+        <mockito.version>5.20.0</mockito.version>
     </properties>
 
     <dependencyManagement>
@@ -144,14 +144,40 @@
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-enforcer-plugin</artifactId>
+                    <version>3.6.2</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.14.1</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.5.3</version>
+                    <version>3.5.4</version>
                 </plugin>
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
-                    <version>3.5.3</version>
+                    <version>3.5.4</version>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-report-plugin</artifactId>
+                    <version>3.5.4</version>
+                    <executions>
+                        <execution>
+                            <phase>test</phase>
+                            <goals>
+                                <goal>report-only</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
 
                 <plugin>
@@ -163,19 +189,19 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
-                    <version>3.5.1</version>
+                    <version>3.6.2</version>
                 </plugin>
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
-                    <version>3.11.3</version>
+                    <version>3.12.0</version>
                 </plugin>
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-gpg-plugin</artifactId>
-                    <version>3.0.1</version>
+                    <version>3.2.8</version>
                 </plugin>
 
                 <plugin>
@@ -188,6 +214,26 @@
         </pluginManagement>
 
         <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>enforce-maven</id>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <requireMavenVersion>
+                                    <version>3.6.3</version>
+                                </requireMavenVersion>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 
             <!-- Create the Markdown reference docs
                  Run in this directory with maven exec:java@reference -N  -->
@@ -217,23 +263,23 @@
                     <dependency>
                         <groupId>uk.co.rgordon</groupId>
                         <artifactId>oddjob</artifactId>
-                        <version>1.7.0-SNAPSHOT</version>
+                        <version>${oddjob.version}</version>
                     </dependency>
                     <dependency>
                         <groupId>uk.co.rgordon</groupId>
                         <artifactId>oj-resolve</artifactId>
-                        <version>1.7.0-SNAPSHOT</version>
+                        <version>${oddjob.version}</version>
                     </dependency>
                     <!-- required to override plugins version. Test still required when updating plugin. -->
                     <dependency>
                         <groupId>org.apache.maven.resolver</groupId>
                         <artifactId>maven-resolver-util</artifactId>
-                        <version>1.9.22</version>
+                        <version>1.9.24</version>
                     </dependency>
                     <dependency>
                         <groupId>uk.co.rgordon</groupId>
                         <artifactId>oj-doc</artifactId>
-                        <version>1.7.0-SNAPSHOT</version>
+                        <version>${oddjob.version}</version>
                     </dependency>
                     <dependency>
                         <groupId>ch.qos.logback</groupId>
@@ -259,6 +305,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <!-- So Mockito doesn't complain -->
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
             </plugin>
 
         </plugins>
